feat: Upgrade TiGateway to Java 17, Spring Boot 3, and Spring Framework 6
- Upgrade Java version from 8/11 to 17 across all modules
- Upgrade Spring Boot from 2.6.3 to 3.2.0
- Upgrade Spring Framework to 6.1.1 (via Spring Boot 3.2.0)
- Upgrade Spring Cloud to 2023.0.0
- Update Maven compiler plugin to 3.11.0
- Update all dependencies to latest compatible versions:
  - Guava: 32.1.3-jre
  - OkHttp: 4.12.0
  - Sentinel: 1.8.6
  - Kubernetes Client: 19.0.0
  - Lombok: 1.18.30
- Refactor MCP module code to use Java 17 features:
  - Replace custom createMap helpers with Map.of()
  - Replace Arrays.asList() with List.of()
  - Use modern Java collection factory methods
  - Remove Java 8 compatibility workarounds
- Update all pom.xml files with new Java 17 configuration
- Fix compilation issues and ensure all tests pass
- Maintain backward compatibility for existing functionality

Breaking Changes:
- Minimum Java version requirement: Java 17
- Spring Boot 3.x requires Jakarta EE (javax.* -> jakarta.*)
- Some deprecated APIs may have been removed

Migration Notes:
- Update your IDE to use Java 17
- Update deployment environments to Java 17
- Review any custom configurations for Spring Boot 3 compatibility