@@ -3,8 +3,6 @@ package ti.gateway.mcp.tools;
 import org.springframework.stereotype.Component;
 import ti.gateway.mcp.model.McpTool;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -18,7 +16,7 @@ public class TiGatewayTools {
      * Get all available TiGateway tools
      */
     public List<McpTool> getAllTools() {
-        return Arrays.asList(
+        return List.of(
             createRouteListTool(),
             createRouteCreateTool(),
             createRouteUpdateTool(),
@@ -39,10 +37,10 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_list_routes",
             "List all routes in TiGateway",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace (optional)"),
                 "filter", McpTool.createProperty("string", "Filter routes by name or pattern (optional)")
-            ), Arrays.asList())
+            ), List.of())
         );
     }
     
@@ -53,7 +51,7 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_create_route",
             "Create a new route in TiGateway",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "name", McpTool.createProperty("string", "Route name"),
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace"),
                 "path", McpTool.createProperty("string", "Route path pattern"),
@@ -61,7 +59,7 @@ public class TiGatewayTools {
                 "port", McpTool.createProperty("integer", "Target service port"),
                 "filters", McpTool.createProperty("array", "List of filters to apply (optional)"),
                 "predicates", McpTool.createProperty("array", "List of predicates (optional)")
-            ), Arrays.asList("name", "namespace", "path", "service", "port"))
+            ), List.of("name", "namespace", "path", "service", "port"))
         );
     }
     
@@ -72,7 +70,7 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_update_route",
             "Update an existing route in TiGateway",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "name", McpTool.createProperty("string", "Route name"),
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace"),
                 "path", McpTool.createProperty("string", "Route path pattern (optional)"),
@@ -80,7 +78,7 @@ public class TiGatewayTools {
                 "port", McpTool.createProperty("integer", "Target service port (optional)"),
                 "filters", McpTool.createProperty("array", "List of filters to apply (optional)"),
                 "predicates", McpTool.createProperty("array", "List of predicates (optional)")
-            ), Arrays.asList("name", "namespace"))
+            ), List.of("name", "namespace"))
         );
     }
     
@@ -91,10 +89,10 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_delete_route",
             "Delete a route from TiGateway",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "name", McpTool.createProperty("string", "Route name"),
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace")
-            ), Arrays.asList("name", "namespace"))
+            ), List.of("name", "namespace"))
         );
     }
     
@@ -105,14 +103,14 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_test_route",
             "Test a route by sending a request",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "name", McpTool.createProperty("string", "Route name"),
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace"),
                 "path", McpTool.createProperty("string", "Test path"),
-                "method", McpTool.createPropertyWithEnum("string", "HTTP method", Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH")),
+                "method", McpTool.createPropertyWithEnum("string", "HTTP method", List.of("GET", "POST", "PUT", "DELETE", "PATCH")),
                 "headers", McpTool.createProperty("object", "Request headers (optional)"),
                 "body", McpTool.createProperty("string", "Request body (optional)")
-            ), Arrays.asList("name", "namespace", "path", "method"))
+            ), List.of("name", "namespace", "path", "method"))
         );
     }
     
@@ -123,10 +121,10 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_list_services",
             "List all services in TiGateway",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace (optional)"),
                 "filter", McpTool.createProperty("string", "Filter services by name (optional)")
-            ), Arrays.asList())
+            ), List.of())
         );
     }
     
@@ -137,10 +135,10 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_service_health",
             "Check the health status of a service",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "service", McpTool.createProperty("string", "Service name"),
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace")
-            ), Arrays.asList("service", "namespace"))
+            ), List.of("service", "namespace"))
         );
     }
     
@@ -151,12 +149,12 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_get_metrics",
             "Get TiGateway metrics and statistics",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "type", McpTool.createPropertyWithEnum("string", "Metrics type", 
-                    Arrays.asList("routes", "services", "requests", "errors", "performance")),
+                    List.of("routes", "services", "requests", "errors", "performance")),
                 "timeRange", McpTool.createProperty("string", "Time range (e.g., '1h', '24h', '7d') (optional)"),
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace (optional)")
-            ), Arrays.asList("type"))
+            ), List.of("type"))
         );
     }
     
@@ -167,12 +165,12 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_get_config",
             "Get TiGateway configuration",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "type", McpTool.createPropertyWithEnum("string", "Configuration type", 
-                    Arrays.asList("routes", "filters", "global", "security", "monitoring")),
+                    List.of("routes", "filters", "global", "security", "monitoring")),
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace (optional)"),
-                "format", McpTool.createPropertyWithEnum("string", "Output format", Arrays.asList("json", "yaml"))
-            ), Arrays.asList("type"))
+                "format", McpTool.createPropertyWithEnum("string", "Output format", List.of("json", "yaml"))
+            ), List.of("type"))
         );
     }
     
@@ -183,87 +181,15 @@ public class TiGatewayTools {
         return new McpTool(
             "tigateway_get_logs",
             "Get TiGateway logs",
-            McpTool.createJsonSchema("object", createMap(
+            McpTool.createJsonSchema("object", Map.of(
                 "level", McpTool.createPropertyWithEnum("string", "Log level", 
-                    Arrays.asList("DEBUG", "INFO", "WARN", "ERROR")),
+                    List.of("DEBUG", "INFO", "WARN", "ERROR")),
                 "lines", McpTool.createProperty("integer", "Number of log lines to retrieve (default: 100)"),
                 "namespace", McpTool.createProperty("string", "Kubernetes namespace (optional)"),
                 "service", McpTool.createProperty("string", "Service name (optional)"),
                 "filter", McpTool.createProperty("string", "Filter logs by text (optional)")
-            ), Arrays.asList())
+            ), List.of())
         );
     }
     
-    /**
-     * Helper method to create Map for Java 8 compatibility
-     */
-    private static <K, V> Map<K, V> createMap(K key1, V value1, K key2, V value2) {
-        Map<K, V> map = new HashMap<>();
-        map.put(key1, value1);
-        map.put(key2, value2);
-        return map;
-    }
-    
-    private static <K, V> Map<K, V> createMap(K key1, V value1, K key2, V value2, K key3, V value3) {
-        Map<K, V> map = new HashMap<>();
-        map.put(key1, value1);
-        map.put(key2, value2);
-        map.put(key3, value3);
-        return map;
-    }
-    
-    private static <K, V> Map<K, V> createMap(K key1, V value1, K key2, V value2, K key3, V value3, K key4, V value4) {
-        Map<K, V> map = new HashMap<>();
-        map.put(key1, value1);
-        map.put(key2, value2);
-        map.put(key3, value3);
-        map.put(key4, value4);
-        return map;
-    }
-    
-    private static <K, V> Map<K, V> createMap(K key1, V value1, K key2, V value2, K key3, V value3, K key4, V value4, K key5, V value5) {
-        Map<K, V> map = new HashMap<>();
-        map.put(key1, value1);
-        map.put(key2, value2);
-        map.put(key3, value3);
-        map.put(key4, value4);
-        map.put(key5, value5);
-        return map;
-    }
-    
-    private static <K, V> Map<K, V> createMap(K key1, V value1, K key2, V value2, K key3, V value3, K key4, V value4, K key5, V value5, K key6, V value6) {
-        Map<K, V> map = new HashMap<>();
-        map.put(key1, value1);
-        map.put(key2, value2);
-        map.put(key3, value3);
-        map.put(key4, value4);
-        map.put(key5, value5);
-        map.put(key6, value6);
-        return map;
-    }
-    
-    private static <K, V> Map<K, V> createMap(K key1, V value1, K key2, V value2, K key3, V value3, K key4, V value4, K key5, V value5, K key6, V value6, K key7, V value7) {
-        Map<K, V> map = new HashMap<>();
-        map.put(key1, value1);
-        map.put(key2, value2);
-        map.put(key3, value3);
-        map.put(key4, value4);
-        map.put(key5, value5);
-        map.put(key6, value6);
-        map.put(key7, value7);
-        return map;
-    }
-    
-    private static <K, V> Map<K, V> createMap(K key1, V value1, K key2, V value2, K key3, V value3, K key4, V value4, K key5, V value5, K key6, V value6, K key7, V value7, K key8, V value8) {
-        Map<K, V> map = new HashMap<>();
-        map.put(key1, value1);
-        map.put(key2, value2);
-        map.put(key3, value3);
-        map.put(key4, value4);
-        map.put(key5, value5);
-        map.put(key6, value6);
-        map.put(key7, value7);
-        map.put(key8, value8);
-        return map;
-    }
 }
